fix: CSS variously trying to remove whitespace

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,23 @@
 @import "twitter/bootstrap/bootstrap";
 
-body { padding-top: 80px; } 
+body { padding-top: 20px; } 
+
+.page-header {
+  padding-bottom: 0px;
+  padding-top:10px;
+  margin: 0 0 0;
+  border-top: 0px;
+  border-bottom: 0px solid #eeeeee
+}
+h3 {
+  line-height: 10px;
+  padding-top: 0px;
+}
+h3 small {
+  font-size: 14px;
+  line-height: 10px;
+  padding-top: 0px;
+}
 
 @import "twitter/bootstrap/responsive";
 
