--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -12,6 +12,7 @@
 .gmaps4rails_map {
   width: 800px;
   height: 400px;
+  position: middle;
 }
 
 .bing_map {
